# Te

./: LICENSE  Schema.sql  Setup.hs  sunshine.txt  te.cabal  te.faction
BackEnd/: Te.hs
BackEnd/Data/: Bitfield.hs  ByteSize.hs  Geometry.hs  SQLable.hs  Timestamp.hs
BackEnd/Te/: Database.hs  Exceptions.hs  ForeignInterface.hs  FrontEndCallbacks.hs  Identifiers.hs  Types.hs
BackEnd/Te/HighLevel/: Application.hs  ApplicationPrivate.hs  ConfirmationDialog.hs  DragAndDrop.hs  DragAndDropPrivate.hs  Inode.hs  Inode.hs-boot  InodePrivate.hs  UUID.hs  Window.hs  Window.hs-boot
BackEnd/Te/HighLevel/Window/: Browser.hs  Browser.hs-boot  Document.hs  Document.hs-boot  DocumentPrivate.hs
BackEnd/Te/HighLevel/Window/Browser/: Item.hs
BackEnd/Te/HighLevel/Window/Document/: HorizontalDivider.hs  HorizontalDivider.hs-boot  HorizontalDividerPrivate.hs  Pane.hs  PanePrivate.hs  VerticalDivider.hs  VerticalDivider.hs-boot  VerticalDividerPrivate.hs
BackEnd/Te/LowLevel/: Database.hs  Exceptions.hs  Exceptions.hs-boot  ForeignInterface.hs  FrontEndCallbacks.hs  Identifiers.hs
Graphics/: TE.ai  Te.ai
Mac/: AppDelegate.h  AppDelegate.m  BrowserItem.h  BrowserItem.m  BrowserWindow.h  BrowserWindow.m  DocumentContentView.h  DocumentContentView.m  DocumentHorizontalDividerManager.h  DocumentHorizontalDividerManager.m  DocumentSplitView.h  DocumentSplitView.m  DocumentWindow.h  DocumentWindow.m  FileNameCell.h  FileNameCell.m  FileNameCellFieldEditor.h  FileNameCellFieldEditor.m  HasCurrentFolder.h  HasSelectedInodes.h  Info.plist  Project.h  Project.m  SizeConstraintParticipant.h  TransparentHelperWindow.h  TransparentHelperWindow.m  TransparentHelperWindowView.h  TransparentHelperWindowView.m  Utilities.h  Utilities.m  Window.h  Window.m
Mac/Resources/: Application.icns  BrowserWindow.xib  DocumentWindow.xib  MainMenu.xib  Project.icns
Mac/Te.xcworkspace/: contents.xcworkspacedata
Mac/Window/: Browser.h  Browser.m  Document.h  Document.m  Window.h
Mac/Window/Browser/: BrowserWindow.h  Item.h  Item.m
Mac/Window/Document/: DocumentSplitView.m  HorizontalDividerManager.h  HorizontalDividerManager.m  PaneInformation.h  PaneInformation.m  PaneManager.h  PaneManager.m  VerticalDividerManager.h  VerticalDividerManager.m  View.h  View.m  Window.h  Window.m
TODO.oo3/: contents.xml
