name: te
version: 0.1
cabal-version: >= 1.6
build-type: Custom
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Network
synopsis: Structure editor for source code
description:
  This package is a structure editor for source code, in particular Haskell
  source code.

Source-Repository head
  type: darcs
  location: http://dankna.com/software/darcs/te/

Flag debug
  manual: True
  default: False

Executable Te
  hs-source-dirs: Mac
  include-dirs: Mac
  c-source-dirs: Mac
  main-is: main.m
  includes: AppDelegate.h,
            Project.h,
            Utilities.h
  c-sources: AppDelegate.m,
             Project.m,
             Utilities.m
  hs-source-dirs: BackEnd
  other-modules: Data.Timestamp,
                 Te,
                 Te.ForeignInterface,
                 Te.FrontEndCallbacks,
                 Te.Identifiers,
                 Te.Types
  build-depends: base >= 4.1 && < 5,
                 template-haskell >= 2.5.0.0 && < 3,
                 time >= 1.2.0.4 && < 2,
                 old-locale >= 1.0.0.2 && < 2,
                 filepath >= 1.2.0.0 && < 2,
                 directory >= 1.1.0.0 && < 2,
                 bytestring >= 0.9.1.4 && < 1,
                 utf8-string >= 0.3.6 && < 1,
                 system-uuid >= 2.1.0 && < 3,
                 murmur-hash >= 0.1.0.2 && < 1,
                 direct-sqlite >= 1.1 && < 2,
                 containers >= 0.4.0.0 && < 1,
                 binary >= 0.5.0.2 && < 1,
                 cabal-app >= 1.0 && < 2
  frameworks: Cocoa
  objc-gc: Mandatory
  if flag(debug)
    ghc-options: -debug
    cc-options: -g3 -O0
  cc-options: -std=c99
  ghc-options: -threaded
  x-app-info-plist: Mac/Info.plist
  x-app-resource-dir: Mac/Resources
  x-app-xibs: MainMenu.xib
  x-app-other-resources: Application.icns,
                         Project.icns,
                         Te.png,
                         FirstRunAttentionArrow.png,
                         File.png,
                         Folder.png,
                         BadgeNew.png,
                         BadgeChanged.png,
                         BadgeMoved.png
